--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "sqlite3": "^5.1.7",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@lacrypta/typescript-config": "^1.0.0",
     "@types/axios": "^0.14.0",
     "@types/node": "^20.14.7",
+    "@types/sqlite3": "^3.1.11",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
